# chat-application

./: Dockerfile  Dockerfile_consumer  Dockerfile_scheduler  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 3ccee1a94b14_add_indices.py  5afc1a74691c_add_chats_count_col.py  7292db113522_alter_app_token_column_to_be_fk.py  7fbacf922393_create_chats_table.py  9689e9c867ed_create_applications_table.py  e89cd77073fd_create_messages_table.py
app/: main.py
app/actions/applications/: exceptions.py  main.py  models.py
app/actions/chats/: exceptions.py  main.py  models.py
app/actions/messages/: main.py  model.py
app/jobs/: main.py  tasks.py
app/models/db/: applications.py  chats.py  messages.py
app/providers/: db.py  elastic_search.py  publisher.py  redis.py
app/routers/: __init__.py  applications.py  chats.py  messages.py
app/tests/: conftest.py  test_application_api.py
consumer/: main.py
