[tool.poetry]
name = "chat-application"
version = "0.1.0"
description = ""
authors = ["Mohamed Bassiouny Sharaf"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
uvicorn = "^0.32.0"
sqlalchemy = "^2.0.36"
databases = "^0.9.0"
pymysql = "^1.1.1"
aiomysql = "^0.2.0"
cryptography = "^43.0.3"
alembic = "^1.14.0"
httpx = "^0.27.2"
pytest-asyncio = "^0.24.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
